--- a/functions/package.json
+++ b/functions/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "firebase-admin": "~7.0.0",
     "firebase-functions": "^2.2.0",
+    "request": "^2.88.0",
     "request-promise": "^4.2.4"
   },
   "devDependencies": {
