--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "firebase-admin": "~7.0.0",
     "firebase-functions": "^2.2.0",
+    "mysql": "^2.17.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.4"
   },
