--- a/functions/package.json
+++ b/functions/package.json
@@ -1,5 +1,8 @@
 {
   "name": "functions",
+  "engines": {
+    "node": "8"
+  },
   "scripts": {
     "lint": "tslint --project tsconfig.json",
     "build": "tsc",
@@ -13,7 +16,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "firebase-admin": "~7.0.0",
-    "firebase-functions": "^2.2.0",
+    "firebase-functions": "^2.3.1",
     "mysql": "^2.17.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.4"
